--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -66,5 +66,5 @@
 }
 
 
-.proj-item:nth-of-type(odd) {background: rgba(0,0,0,.05);}
-.proj-item-index:nth-of-type(odd) {background: rgba(0,0,0,.05);}
+.proj-item:nth-of-type(even) {background: rgba(0,0,0,.05);}
+.proj-item-index:nth-of-type(even) {background: rgba(0,0,0,.05);}
